Principled Volume Shader doesn't interact properly with Instancing settings #60969

Closed
opened 2019-01-29 06:26:57 +01:00 by M · 6 comments

System Information
Operating system: Windows 7 SP1 x64 (ES locale)
Graphics card: Nvidia GT 1030

Blender Version
Broken: 2.80, cad1016c20, 2019-01-28 16:46
Worked: New?

Short description of error
Using the instancing settings on a volumetric shaded object that has been parented to a controlling mesh doesn't work as expected and instead only produces 1 voxel volumetric instead of multiple.

Exact steps for others to reproduce the error

  1. Create a cube, add a new shader to it, delete the "Principled BSDF" node and connect a new "Principled Volume" node to the volume output node.

  2. Turn on the volumetric setting in the render tab with Eevee as render engine.

  3. Parent the volumetric cube to some other primitive, (in my example I'm using a slightly scaled up icosphere but anything works here)

  4. Go to your secondary primitive (parent) and under the object tab in the properties panel set the "Instancing" setting to Verts or Faces, you can also untick "display instancer" for visibility.

  5. Finally, turn the shading to Lookdev or Rendered (eevee), both will show the cube only instanced ONCE instead of for every vertice or face.

This bug makes it very hard to work with voxelized shapes for volumetric effects, greatly reducing te usefulness of this shader on Eevee.

volumesBug.blend

bug.png

**System Information** Operating system: Windows 7 SP1 x64 (ES locale) Graphics card: Nvidia GT 1030 **Blender Version** Broken: 2.80, cad1016c20b5, 2019-01-28 16:46 Worked: New? **Short description of error** Using the instancing settings on a volumetric shaded object that has been parented to a controlling mesh doesn't work as expected and instead only produces 1 voxel volumetric instead of multiple. **Exact steps for others to reproduce the error** 1) Create a cube, add a new shader to it, delete the "Principled BSDF" node and connect a new "Principled Volume" node to the volume output node. 2) Turn on the volumetric setting in the render tab with Eevee as render engine. 3) Parent the volumetric cube to some other primitive, (in my example I'm using a slightly scaled up icosphere but anything works here) 4) Go to your secondary primitive (parent) and under the object tab in the properties panel set the "Instancing" setting to Verts or Faces, you can also untick "display instancer" for visibility. 5) Finally, turn the shading to Lookdev or Rendered (eevee), both will show the cube only instanced ONCE instead of for every vertice or face. This bug makes it very hard to work with voxelized shapes for volumetric effects, greatly reducing te usefulness of this shader on Eevee. [volumesBug.blend](https://archive.blender.org/developer/F6439583/volumesBug.blend) ![bug.png](https://archive.blender.org/developer/F6439591/bug.png)
Author

Added subscriber: @Matt-10

Added subscriber: @Matt-10
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Clément Foucault was assigned by Jacques Lucke 2019-01-29 12:12:12 +01:00
Member

There is definitely something strange going on here. When I open this file, the whole viewport is red.

red volume.gif

There is definitely something strange going on here. When I open this file, the whole viewport is red. ![red volume.gif](https://archive.blender.org/developer/F6442202/red_volume.gif)
Author

That's wildly different from my result, but the example I provided also has non default values on the volume node I used to test with.

I reset blender to factory defaults and remade the example blend file with the default values on the volume node.

This is (still) my result:

blender_2019-01-29_08-57-57.png

volumeBug2.blend

That's wildly different from my result, but the example I provided also has non default values on the volume node I used to test with. I reset blender to factory defaults and remade the example blend file with the default values on the volume node. This is (still) my result: ![blender_2019-01-29_08-57-57.png](https://archive.blender.org/developer/F6442522/blender_2019-01-29_08-57-57.png) [volumeBug2.blend](https://archive.blender.org/developer/F6442500/volumeBug2.blend)

This issue was referenced by dcbc46dacb

This issue was referenced by dcbc46dacb2fbc2582f3b9fe47d4a36519de668d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#60969
No description provided.