Fix T60969 Eevee: Volumetrics broken with dupli objects

The volumeObjectMatrix uniform was referencing memory from the temp dupli
object. Create temp storage to store the matrix.